@@ -1,3 +1,8 @@
+2008-07-25  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
+
+	* flumotion/component/dvb/wizard_gtk.py:
+	Pulse progress bar when scanning at 5 second intervals.
+
 2008-07-24  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
 
 	* flumotion/component/dvb/dvbchecks.py:
